--- a/series.conf
+++ b/series.conf
@@ -56229,6 +56229,7 @@
 	patches.suse/media-usbtv-Fix-refcounting-mixup.patch
 	patches.suse/regulator-resolve-supply-after-creating-regulator.patch
 	patches.suse/fs-Don-t-invalidate-page-buffers-in-block_write_full.patch
+	patches.suse/0004-md-bitmap-md_bitmap_read_sb-uses-wrong-bitmap-blocks.patch
 	patches.suse/md-raid5-fix-oops-during-stripe-resizing.patch
 	patches.suse/xen-gntdev.c-Mark-pages-as-dirty.patch
 	patches.suse/x86-xen-disable-Firmware-First-mode-for-correctable-.patch
