--- a/series.conf
+++ b/series.conf
@@ -39213,6 +39213,7 @@
 	patches.suse/0002-module-setup-load-info-before-module_sig_check.patch
 	patches.suse/0003-modsign-log-module-name-in-the-event-of-an-error.patch
 	patches.suse/0004-ARM-module-fix-modsign-build-error.patch
+	patches.suse/powerpc-pci-Remove-legacy-debug-code.patch
 	patches.suse/powerpc-kdump-Handle-crashkernel-memory-reservation-.patch
 	patches.suse/powerpc-xive-Replace-msleep-x-with-msleep-OPAL_BUSY_.patch
 	patches.suse/powerpc-64s-Remove-POWER9-DD1-support.patch
