--- a/series.conf
+++ b/series.conf
@@ -52791,6 +52791,7 @@
 	patches.suse/USB-uas-heed-CAPACITY_HEURISTICS.patch
 	patches.suse/USB-documentation-flags-on-usb-storage-versus-UAS.patch
 	patches.suse/usb-storage-Disable-UAS-on-JMicron-SATA-enclosure.patch
+	patches.suse/usb-gadget-configfs-Fix-missing-spin_lock_init.patch
 	patches.suse/mei-fix-modalias-documentation.patch
 	patches.suse/mei-bus-prefix-device-names-on-bus-with-the-bus-name.patch
 	patches.suse/ppdev-fix-PPGETTIME-PPSETTIME-ioctls.patch
