blacklist.conf: misattributed patch. The upstream tag is wrong.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1717,3 +1717,4 @@ a62520473f15750cd1432d36b377a06cd7cff8d2 # net: macb: no PTP support in the driv
 611d779af7cad2b87487ff58e4931a90c20b113c # net: phy: lead to kABI breakage
 0aae11bcdefb4894b6100656ad24cbd85ff34b52 # PM/devfreq: not applicable, only indent fix
 d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
+0ed08faded1da03eb3def61502b27f81aef2e615 # misattributed. The issue is introduced only in e399396a6b061ba9e68e64e2867cc3a0f26f0ace, whick we lack
