--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1743,3 +1743,4 @@ a62520473f15750cd1432d36b377a06cd7cff8d2 # net: macb: no PTP support in the driv
 0aae11bcdefb4894b6100656ad24cbd85ff34b52 # PM/devfreq: not applicable, only indent fix
 d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
 0ed08faded1da03eb3def61502b27f81aef2e615 # misattributed. The issue is introduced only in e399396a6b061ba9e68e64e2867cc3a0f26f0ace, whick we lack
+c1bea0a840ac75dca19bc6aa05575a33eb9fd058 # doesn't apply
