EDAC/amd64: Fix PCI component registration (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -56958,6 +56958,7 @@
 	patches.suse/crypto-af_alg-avoid-undefined-behavior-accessing-sal.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/crypto-omap-aes-Fix-PM-disable-depth-imbalance-in-om.patch
+	patches.suse/edac-amd64-fix-pci-component-registration.patch
 	patches.suse/x86-mm-ident_map-check-for-errors-from-ident_pud_init.patch
 	patches.suse/mm-memory_failure-always-pin-the-page-in-madvise_inj.patch
 	patches.suse/wimax-fix-duplicate-initializer-warning.patch
