--- a/series.conf
+++ b/series.conf
@@ -57066,6 +57066,7 @@
 	patches.suse/scsi-lpfc-lpfc_attr-Demote-kernel-doc-format-for-red.patch
 	patches.suse/scsi-lpfc-lpfc_attr-Fix-up-a-bunch-of-kernel-doc-mis.patch
 	patches.suse/scsi-lpfc-lpfc_debugfs-Fix-a-couple-of-function-docu.patch
+	patches.suse/scsi-core-Fix-VPD-LUN-ID-designator-priorities.patch
 	patches.suse/scsi-lpfc-Rework-remote-port-ref-counting-and-node-f.patch
 	patches.suse/scsi-lpfc-Rework-locations-of-ndlp-reference-taking.patch
 	patches.suse/scsi-lpfc-Fix-removal-of-SCSI-transport-device-get-a.patch
