series.conf: Move EB Certificate to the end of series.conf
To avoid conflicting with SLE patches.

--- a/series.conf
+++ b/series.conf
@@ -17079,9 +17079,6 @@
 	# https://github.com/kdave/btrfs-devel.git misc-next
 	patches.suse/0001-btrfs-qgroup-don-t-try-to-wait-flushing.patch
 
-	# out-of-tree patches
-	patches.suse/certs-Add-customers_bmw_xpad_devel.pem-for-EB.patch
-
 	########################################################
 	# end of sorted patches
 	########################################################
@@ -18020,3 +18017,5 @@
 	patches.suse/0010-spi-nor-intel-spi-Ignore-flash-device-FSR-register.patch
 	patches.suse/0001-pinctrl-denverton-using-intel-pin-control-probe-func.patch
 
+	# Built-in Certificates
+	patches.suse/certs-Add-customers_bmw_xpad_devel.pem-for-EB.patch
