x86/mm/numa: Remove uninitialized_var() usage (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -55748,6 +55748,7 @@
 	patches.suse/cpufreq-intel_pstate-Fix-EPP-setting-via-sysfs-in-ac.patch
 	patches.suse/ACPICA-Do-not-increment-operation_region-reference-c.patch
 	patches.suse/PCI-hotplug-ACPI-Fix-context-refcounting-in-acpiphp_.patch
+	patches.suse/x86-mm-numa-remove-uninitialized_var-usage.patch
 	patches.suse/b43-Remove-uninitialized_var-usage.patch
 	patches.suse/rtlwifi-rtl8192cu-Remove-uninitialized_var-usage.patch
 	patches.suse/spi-davinci-Remove-uninitialized_var-usage.patch
