x86/i8259: Use printk_deferred() to prevent deadlock (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -55713,6 +55713,7 @@
 	patches.suse/0006-af_key-pfkey_dump-needs-parameter-validation.patch
 	patches.suse/bpf-Fix-map-leak-in-HASH_OF_MAPS-map.patch
 	patches.suse/kvm-svm-fix-disable-pause-loop-exit-pause-filtering-capability-on-svm
+	patches.suse/x86-i8259-use-printk_deferred-to-prevent-deadlock.patch
 	patches.suse/0001-btrfs-inode-refactor-the-parameters-of-insert_reserv.patch
 	patches.suse/0002-btrfs-inode-move-qgroup-reserved-space-release-to-th.patch
 	patches.suse/0003-btrfs-file-reserve-qgroup-space-after-the-hole-punch.patch
