--- a/series.conf
+++ b/series.conf
@@ -57153,6 +57153,7 @@
 	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
 	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
+	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
