--- a/series.conf
+++ b/series.conf
@@ -54050,6 +54050,7 @@
 	patches.suse/cpufreq-intel_pstate-fix-wrong-macro-conversion.patch
 	patches.suse/sched-fair-reorder-enqueue-dequeue_task_fair-path.patch
 	patches.suse/sched-fair-fix-reordering-of-enqueue-dequeue_task_fair.patch
+	patches.suse/sched-fair-fix-enqueue_task_fair-warning.patch
 	patches.suse/irqchip-bcm2835-Quiesce-IRQs-left-enabled-by-bootloa.patch
 	patches.suse/fbdev-g364fb-Fix-build-failure.patch
 	patches.suse/firmware-arm_sdei-fix-double-lock-on-hibernate-with-.patch
