--- a/series.conf
+++ b/series.conf
@@ -54048,6 +54048,7 @@
 	patches.suse/hwrng-via_rng-convert-to-new-x86-cpu-match-macros.patch
 	patches.suse/x86-cpu-cleanup-the-now-unused-cpu-match-macros.patch
 	patches.suse/cpufreq-intel_pstate-fix-wrong-macro-conversion.patch
+	patches.suse/sched-fair-reorder-enqueue-dequeue_task_fair-path.patch
 	patches.suse/irqchip-bcm2835-Quiesce-IRQs-left-enabled-by-bootloa.patch
 	patches.suse/fbdev-g364fb-Fix-build-failure.patch
 	patches.suse/firmware-arm_sdei-fix-double-lock-on-hibernate-with-.patch
