sched/fair: Fix enqueue_task_fair() warning some more (bsc#1179093).

--- a/series.conf
+++ b/series.conf
@@ -54683,6 +54683,7 @@
 	patches.suse/net-mlx4_core-fix-a-memory-leak-bug.patch
 	patches.suse/net-mlx5-Add-command-entry-handling-completion.patch
 	patches.suse/net-mlx5e-Update-netdev-txq-on-completions-during-cl.patch
+	patches.suse/sched-fair-fix-enqueue_task_fair-warning-some-more.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 	patches.suse/Input-usbtouchscreen-add-support-for-BonXeon-TP.patch
 	patches.suse/Input-evdev-call-input_flush_device-on-release-not-f.patch
