mm: don't wake kswapd prematurely when watermark boosting is disabled (git fixes (mm/vmscan)).

--- a/series.conf
+++ b/series.conf
@@ -56963,6 +56963,7 @@
 	patches.suse/edac-amd64-fix-pci-component-registration.patch
 	patches.suse/x86-mm-ident_map-check-for-errors-from-ident_pud_init.patch
 	patches.suse/mm-memory_failure-always-pin-the-page-in-madvise_inj.patch
+	patches.suse/mm-don-t-wake-kswapd-prematurely-when-watermark-boosting-is-disabled.patch
 	patches.suse/wimax-fix-duplicate-initializer-warning.patch
 	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/orinoco-Move-context-allocation-after-processing-the.patch
