x86/mm: Fix leak of pmd ptlock (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -57155,6 +57155,7 @@
 	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
+	patches.suse/x86-mm-fix-leak-of-pmd-ptlock.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
