--- a/series.conf
+++ b/series.conf
@@ -57156,6 +57156,7 @@
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 	patches.suse/x86-mm-fix-leak-of-pmd-ptlock.patch
+	patches.suse/x86-mtrr-correct-the-range-check-before-performing-mtrr-type-lookups.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
