--- a/series.conf
+++ b/series.conf
@@ -57173,6 +57173,7 @@
 	patches.suse/usb-gadget-f_uac2-reset-wMaxPacketSize.patch
 	patches.suse/usb-gadget-select-CONFIG_CRC32.patch
 	patches.suse/usb-gadget-configfs-Preserve-function-ordering-after.patch
+	patches.suse/USB-serial-iuu_phoenix-fix-DMA-from-stack.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
