misc: vmw_vmci: fix kernel info-leak by initializing dbells in vmci_ctx_get_chkpt_doorbells() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57014,6 +57014,7 @@
 	patches.suse/USB-serial-option-add-interface-number-sanity-check-.patch
 	patches.suse/serial_core-Check-for-port-state-when-tty-is-in-erro.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
+	patches.suse/misc-vmw_vmci-fix-kernel-info-leak-by-initializing-d.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
 	patches.suse/iio-buffer-Fix-demux-update.patch
