USB: gadget: legacy: fix return error code in acm_ms_bind() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57166,6 +57166,7 @@
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
 	patches.suse/dmaengine-xilinx_dma-fix-mixed_enum_type-coverity-wa.patch
 	patches.suse/USB-xhci-fix-U1-U2-handling-for-hardware-with-XHCI_I.patch
+	patches.suse/USB-gadget-legacy-fix-return-error-code-in-acm_ms_bi.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
