Revert "device property: Keep secondary firmware node secondary by type" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57162,6 +57162,7 @@
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 	patches.suse/wil6210-select-CONFIG_CRC32.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
+	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
