USB: yurex: fix control-URB timeout handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57168,6 +57168,7 @@
 	patches.suse/USB-xhci-fix-U1-U2-handling-for-hardware-with-XHCI_I.patch
 	patches.suse/USB-gadget-legacy-fix-return-error-code-in-acm_ms_bi.patch
 	patches.suse/usb-chipidea-ci_hdrc_imx-add-missing-put_device-call.patch
+	patches.suse/USB-yurex-fix-control-URB-timeout-handling.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
