USB: xhci: fix U1/U2 handling for hardware with XHCI_INTEL_HOST quirk set (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57165,6 +57165,7 @@
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
 	patches.suse/dmaengine-xilinx_dma-fix-mixed_enum_type-coverity-wa.patch
+	patches.suse/USB-xhci-fix-U1-U2-handling-for-hardware-with-XHCI_I.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
