--- a/series.conf
+++ b/series.conf
@@ -57172,6 +57172,7 @@
 	patches.suse/usb-dwc3-ulpi-Use-VStsDone-to-detect-PHY-regs-access.patch
 	patches.suse/usb-gadget-f_uac2-reset-wMaxPacketSize.patch
 	patches.suse/usb-gadget-select-CONFIG_CRC32.patch
+	patches.suse/usb-gadget-configfs-Preserve-function-ordering-after.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
