--- a/series.conf
+++ b/series.conf
@@ -57164,6 +57164,7 @@
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
+	patches.suse/dmaengine-xilinx_dma-fix-mixed_enum_type-coverity-wa.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
