--- a/series.conf
+++ b/series.conf
@@ -56953,6 +56953,7 @@
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-sunxi-cir-ensure-IR-is-handled-when-it-is-cont.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
+	patches.suse/media-gp8psk-initialize-stats-at-power-control-logic.patch
 	patches.suse/media-msi2500-assign-SPI-bus-number-dynamically.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
 	patches.suse/media-gspca-Fix-memory-leak-in-probe.patch
