--- a/series.conf
+++ b/series.conf
@@ -57170,6 +57170,7 @@
 	patches.suse/usb-chipidea-ci_hdrc_imx-add-missing-put_device-call.patch
 	patches.suse/USB-yurex-fix-control-URB-timeout-handling.patch
 	patches.suse/usb-dwc3-ulpi-Use-VStsDone-to-detect-PHY-regs-access.patch
+	patches.suse/usb-gadget-f_uac2-reset-wMaxPacketSize.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
