ALSA: pcm: Clear the full allocated memory at hw_params (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57151,6 +57151,7 @@
 	patches.suse/watchdog-qcom-Avoid-context-switch-in-restart-handle.patch
 	patches.suse/watchdog-coh901327-add-COMMON_CLK-dependency.patch
 	patches.suse/ALSA-usb-audio-Disable-sample-read-check-if-firmware.patch
+	patches.suse/ALSA-pcm-Clear-the-full-allocated-memory-at-hw_param.patch
 	patches.suse/ALSA-pcm-oss-Fix-a-few-more-UBSAN-fixes.patch
 	patches.suse/s390-dasd-fix-hanging-device-offline-processing
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
