usb: chipidea: ci_hdrc_imx: add missing put_device() call in usbmisc_get_init_data() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57167,6 +57167,7 @@
 	patches.suse/dmaengine-xilinx_dma-fix-mixed_enum_type-coverity-wa.patch
 	patches.suse/USB-xhci-fix-U1-U2-handling-for-hardware-with-XHCI_I.patch
 	patches.suse/USB-gadget-legacy-fix-return-error-code-in-acm_ms_bi.patch
+	patches.suse/usb-chipidea-ci_hdrc_imx-add-missing-put_device-call.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
