dmaengine: xilinx_dma: check dma_async_device_register return value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57163,6 +57163,7 @@
 	patches.suse/wil6210-select-CONFIG_CRC32.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
+	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
