--- a/series.conf
+++ b/series.conf
@@ -57171,6 +57171,7 @@
 	patches.suse/USB-yurex-fix-control-URB-timeout-handling.patch
 	patches.suse/usb-dwc3-ulpi-Use-VStsDone-to-detect-PHY-regs-access.patch
 	patches.suse/usb-gadget-f_uac2-reset-wMaxPacketSize.patch
+	patches.suse/usb-gadget-select-CONFIG_CRC32.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
