--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1719,3 +1719,4 @@ a62520473f15750cd1432d36b377a06cd7cff8d2 # net: macb: no PTP support in the driv
 d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
 0ed08faded1da03eb3def61502b27f81aef2e615 # misattributed. The issue is introduced only in e399396a6b061ba9e68e64e2867cc3a0f26f0ace, whick we lack
 44623b2818f4a442726639572f44fd9b6d0ef68c # clang-specific
+678799194a5311765263b6aa940910ab232767eb # net: usb: hso: already applied
