--- a/series.conf
+++ b/series.conf
@@ -51999,6 +51999,7 @@
 	patches.suse/0005-net-aquantia-Fix-aq_vec_isr_legacy-return-value.patch
 	patches.suse/cxgb4-Signedness-bug-in-init_one.patch
 	patches.suse/0006-net-hisilicon-Fix-signedness-bug-in-hix5hd2_dev_prob.patch
+	patches.suse/0001-net-broadcom-bcmsysport-Fix-signedness-in-bcm_syspor.patch
 	patches.suse/net-netsec-Fix-signedness-bug-in-netsec_probe.patch
 	patches.suse/net-socionext-Fix-a-signedness-bug-in-ave_probe.patch
 	patches.suse/bpf-fix-BTF-verification-of-enums.patch
