net: stmmac: dwmac-meson8b: Fix signedness bug in probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52002,6 +52002,7 @@
 	patches.suse/0001-net-broadcom-bcmsysport-Fix-signedness-in-bcm_syspor.patch
 	patches.suse/net-netsec-Fix-signedness-bug-in-netsec_probe.patch
 	patches.suse/net-socionext-Fix-a-signedness-bug-in-ave_probe.patch
+	patches.suse/0002-net-stmmac-dwmac-meson8b-Fix-signedness-bug-in-probe.patch
 	patches.suse/bpf-fix-BTF-verification-of-enums.patch
 	patches.suse/bpf-fix-BTF-limits.patch
 	patches.suse/xsk-relax-UMEM-headroom-alignment.patch
