--- a/series.conf
+++ b/series.conf
@@ -52003,6 +52003,7 @@
 	patches.suse/net-netsec-Fix-signedness-bug-in-netsec_probe.patch
 	patches.suse/net-socionext-Fix-a-signedness-bug-in-ave_probe.patch
 	patches.suse/0002-net-stmmac-dwmac-meson8b-Fix-signedness-bug-in-probe.patch
+	patches.suse/0003-net-ethernet-stmmac-Fix-signedness-bug-in-ipq806x_gm.patch
 	patches.suse/bpf-fix-BTF-verification-of-enums.patch
 	patches.suse/bpf-fix-BTF-limits.patch
 	patches.suse/xsk-relax-UMEM-headroom-alignment.patch
