net: stmmac: gmac4+: Not all Unicast addresses may be available (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52178,6 +52178,7 @@
 	patches.suse/drivers-base-memory.c-don-t-access-uninitialized-mem.patch
 	patches.suse/ocfs2-fix-panic-due-to-ocfs2_wq-is-null.patch
 	patches.suse/net-dsa-b53-Do-not-clear-existing-mirrored-port-mask.patch
+	patches.suse/0004-net-stmmac-gmac4-Not-all-Unicast-addresses-may-be-av.patch
 	patches.suse/net_sched-fix-backward-compatibility-for-TCA_ACT_KIN.patch
 	patches.suse/NFC-pn533-fix-use-after-free-and-memleaks.patch
 	patches.suse/mac80211-Reject-malformed-SSID-elements.patch
