--- a/series.conf
+++ b/series.conf
@@ -52184,6 +52184,7 @@
 	patches.suse/mac80211-Reject-malformed-SSID-elements.patch
 	patches.suse/cfg80211-wext-avoid-copying-malformed-SSIDs.patch
 	patches.suse/mac80211-accept-deauth-frames-in-IBSS-mode.patch
+	patches.suse/0005-net-stmmac-fix-length-of-PTP-clock-s-name-string.patch
 	patches.suse/bonding-fix-potential-NULL-deref-in-bond_update_slav.patch
 	patches.suse/phylink-fix-kernel-doc-warnings.patch
 	patches.suse/act_mirred-Fix-mirred_init_module-error-handling.patch
