net: phy: micrel: make sure the factory test bit is cleared (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48773,6 +48773,7 @@
 	patches.suse/mac80211-add-option-for-setting-control-flags.patch
 	patches.suse/ibmvnic-Add-device-identification-to-requested-IRQs.patch
 	patches.suse/cxgb4-Delete-all-hash-and-TCAM-filters-before-resour.patch
+	patches.suse/0006-net-phy-micrel-make-sure-the-factory-test-bit-is-cle.patch
 	patches.suse/i40e-Fix-for-allowing-too-many-MDD-events-on-VF.patch
 	patches.suse/i40e-change-behavior-on-PF-in-response-to-MDD-event.patch
 	patches.suse/i40e-remove-error-msg-when-vf-with-port-vlan-tries-t.patch
