net: phy: micrel: Discern KSZ8051 and KSZ8795 PHYs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52203,6 +52203,7 @@
 	patches.suse/net-bcmgenet-Fix-RGMII_MODE_EN-value-for-GENET-v1-2-.patch
 	patches.suse/net-usb-sr9800-fix-uninitialized-local-variable.patch
 	patches.suse/net-stmmac-disable-enable-ptp_ref_clk-in-suspend-res.patch
+	patches.suse/0007-net-phy-micrel-Discern-KSZ8051-and-KSZ8795-PHYs.patch
 	patches.suse/ipv4-Return-ENETUNREACH-if-we-can-t-create-route-but.patch
 	patches.suse/net-phy-bcm7xxx-define-soft_reset-for-40nm-EPHY.patch
 	patches.suse/net-bcmgenet-reset-40nm-EPHY-on-energy-detect.patch
