net: bcmgenet: reapply manual settings to the PHY (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52385,6 +52385,7 @@
 	patches.suse/powerpc-bpf-Fix-tail-call-implementation.patch
 	patches.suse/bonding-fix-state-transition-issue-in-link-monitorin.patch
 	patches.suse/NFC-fdp-fix-incorrect-free-object.patch
+	patches.suse/0008-net-bcmgenet-reapply-manual-settings-to-the-PHY.patch
 	patches.suse/net-smc-fix-ethernet-interface-refcounting
 	patches.suse/net-mlx5e-Fix-eswitch-debug-print-of-max-fdb-flow.patch
 	patches.suse/NFC-st21nfca-fix-double-free.patch
