--- a/series.conf
+++ b/series.conf
@@ -52500,6 +52500,7 @@
 	patches.suse/s390-qeth-fix-potential-deadlock-on-workqueue-flush
 	patches.suse/s390-qeth-return-proper-errno-on-io-error
 	patches.suse/net-ibmvnic-Ignore-H_FUNCTION-return-from-H_EOI-to-t.patch
+	patches.suse/0009-net-qca_spi-Move-reset_count-to-struct-qcaspi.patch
 	patches.suse/net-mlx5e-Fix-set-vf-link-state-error-flow.patch
 	patches.suse/net-mlx5-Update-the-list-of-the-PCI-supported-device-b7eca940.patch
 	patches.suse/net-mlxfw-Verify-FSM-error-code-translation-doesn-t-.patch
