x86/resctrl: Use an IPI instead of task_work_add() to update PQR_ASSOC MSR (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -57157,6 +57157,7 @@
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 	patches.suse/x86-mm-fix-leak-of-pmd-ptlock.patch
 	patches.suse/x86-mtrr-correct-the-range-check-before-performing-mtrr-type-lookups.patch
+	patches.suse/x86-resctrl-use-an-ipi-instead-of-task_work_add-to-update-pqr_assoc-msr.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
