--- a/series.conf
+++ b/series.conf
@@ -57158,6 +57158,7 @@
 	patches.suse/x86-mm-fix-leak-of-pmd-ptlock.patch
 	patches.suse/x86-mtrr-correct-the-range-check-before-performing-mtrr-type-lookups.patch
 	patches.suse/x86-resctrl-use-an-ipi-instead-of-task_work_add-to-update-pqr_assoc-msr.patch
+	patches.suse/x86-resctrl-don-t-move-a-task-to-the-same-resource-group.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
