--- a/series.conf
+++ b/series.conf
@@ -49317,6 +49317,7 @@
 	patches.suse/powerpc-tm-Avoid-machine-crash-on-rt_sigreturn.patch
 	patches.suse/powerpc-mm-Move-book3s64-specifics-in-subdirectory-m.patch
 	patches.suse/powerpc-security-Show-powerpc_security_features-in-d.patch
+	patches.suse/powerpc-perf-init-pmu-from-core-book3s.patch
 	patches.suse/powerpc-perf-Remove-PM_BR_CMPL_ALT-from-power9-event.patch
 	patches.suse/powerpc-book3s-64-check-for-NULL-pointer-in-pgd_allo.patch
 	patches.suse/pwm-Fix-deadlock-warning-when-removing-PWM-device.patch
