--- a/series.conf
+++ b/series.conf
@@ -56209,6 +56209,7 @@
 	patches.suse/usb-host-ohci-exynos-Fix-error-handling-in-exynos_oh.patch
 	patches.suse/USB-Ignore-UAS-for-JMicron-JMS567-ATA-ATAPI-Bridge.patch
 	patches.suse/usb-storage-Add-unusual_uas-entry-for-Sony-PSZ-drive.patch
+	patches.suse/powerpc-perf-Fix-crashes-with-generic_compat_pmu-BHR.patch
 	patches.suse/cifs-fix-check-of-tcon-dfs-in-smb1.patch
 	patches.suse/mmc-sdhci-pci-fix-sdhci_reset_all-for-cqhci-for-intel-glk-based-controllers.patch
 	patches.suse/sdhci-tegra-Remove-SDHCI_QUIRK_DATA_TIMEOUT_USES_SDC2.patch
