--- a/series.conf
+++ b/series.conf
@@ -57181,6 +57181,7 @@
 	patches.suse/wil6210-select-CONFIG_CRC32.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
+	patches.suse/docs-Fix-reST-markup-when-linking-to-sections.patch
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
 	patches.suse/dmaengine-xilinx_dma-fix-mixed_enum_type-coverity-wa.patch
 	patches.suse/x86-mm-fix-leak-of-pmd-ptlock.patch
