blacklist.conf: build fix not relevant in our config

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1721,3 +1721,4 @@ d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
 44623b2818f4a442726639572f44fd9b6d0ef68c # clang-specific
 678799194a5311765263b6aa940910ab232767eb # net: usb: hso: already applied
 aa8c7db494d0a83ecae583aa193f1134ef25d506 # breaks kABI
+d7889c2020e08caab0d7e36e947f642d91015bd0 # not relevant in our config
