--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1722,3 +1722,4 @@ d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
 678799194a5311765263b6aa940910ab232767eb # net: usb: hso: already applied
 aa8c7db494d0a83ecae583aa193f1134ef25d506 # breaks kABI
 5596fe34495cf0f645f417eb928ef224df3e3cb4 # UP not enabled in configs
+5812b32e01c6d86ba7a84110702b46d8a8531fe9 # Tables not used currently in-tree
