net: phy: Allow BCM54616S PHY to setup internal TX/RX clock delay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43767,6 +43767,7 @@
 	patches.suse/0010-Btrfs-fix-infinite-loop-on-inode-eviction-after-dedu.patch
 	patches.suse/0011-Btrfs-fix-data-corruption-due-to-cloning-of-eof-bloc.patch
 	patches.suse/btrfs-fix-missing-delayed-iputs-on-unmount.patch
+	patches.suse/0001-net-phy-Allow-BCM54616S-PHY-to-setup-internal-TX-RX-.patch
 	patches.suse/ice-Set-carrier-state-and-start-stop-queues-in-rebui.patch
 	patches.suse/ice-Check-for-reset-in-progress-during-remove.patch
 	patches.suse/ice-Fix-dead-device-link-issue-with-flow-control.patch
