net: phy: broadcom: Fix RGMII delays configuration for BCM54210E (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52594,6 +52594,7 @@
 	patches.suse/crypto-crypto4xx-fix-double-free-in-crypto4xx_destro.patch
 	patches.suse/crypto-tgr192-remove-unneeded-semicolon.patch
 	patches.suse/mvpp2-remove-misleading-comment.patch
+	patches.suse/0002-net-phy-broadcom-Fix-RGMII-delays-configuration-for-.patch
 	patches.suse/net-ena-change-num_queues-to-num_io_queues-for-clari.patch
 	patches.suse/net-ena-multiple-queue-creation-related-cleanups.patch
 	patches.suse/net-ena-ethtool-get_channels-use-combined-only.patch
