--- a/series.conf
+++ b/series.conf
@@ -52611,6 +52611,7 @@
 	patches.suse/dpaa_eth-add-newline-in-dev_err-msg.patch
 	patches.suse/Bluetooth-hci_core-fix-init-for-HCI_USER_CHANNEL.patch
 	patches.suse/bpf-stackmap-Fix-deadlock-with-rq_lock-in-bpf_get_st.patch
+	patches.suse/0003-net-dsa-LAN9303-select-REGMAP-when-LAN9303-enable.patch
 	patches.suse/e1000e-Add-support-for-Comet-Lake.patch
 	patches.suse/e1000e-Use-rtnl_lock-to-prevent-race-conditions-betw.patch
 	patches.suse/e1000e-Drop-unnecessary-__E1000_DOWN-bit-twiddling.patch
