- drivers/net: Use octal not symbolic permissions (git-fixes). - Refresh patches.suse/msft-hv-1661-scsi-netvsc-Use-the-vmbus-function-to-calculate-ring.patch. - Refresh patches.suse/msft-hv-1707-hv_netvsc-fix-network-namespace-issues-with-VF-suppo.patch.

--- a/series.conf
+++ b/series.conf
@@ -28027,6 +28027,7 @@
 	patches.suse/wcn36xx-calculate-DXE-control-registers-values.patch
 	patches.suse/wcn36xx-calculate-DXE-default-channel-values.patch
 	patches.suse/wcn36xx-Check-DXE-IRQ-reason.patch
+	patches.suse/0004-drivers-net-Use-octal-not-symbolic-permissions.patch
 	patches.suse/mwifiex-remove-warnings-in-mwifiex_cmd_append_11n_tl.patch
 	patches.suse/rtlwifi-Add-modifier-static-to-functions-reported-by.patch
 	patches.suse/rtlwifi-remove-redundant-statement-found-by-static-c.patch
