net: usb: lan78xx: Fix error message format specifier (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53311,6 +53311,7 @@
 	patches.suse/gtp-fix-an-use-after-free-in-ipv4_pdp_find.patch
 	patches.suse/gtp-avoid-zero-size-hashtable.patch
 	patches.suse/net-smc-add-fallback-check-to-connect
+	patches.suse/0006-net-usb-lan78xx-Fix-error-message-format-specifier.patch
 	patches.suse/rfkill-Fix-incorrect-check-to-avoid-NULL-pointer-der.patch
 	patches.suse/mwifiex-fix-possible-heap-overflow-in-mwifiex_proces.patch
 	patches.suse/mwifiex-Fix-heap-overflow-in-mmwifiex_process_tdls_a.patch
