--- a/series.conf
+++ b/series.conf
@@ -53318,6 +53318,7 @@
 	patches.suse/net-qlogic-Fix-error-paths-in-ql_alloc_large_buffers.patch
 	patches.suse/net-nfc-nci-fix-a-possible-sleep-in-atomic-context-b.patch
 	patches.suse/0007-net-stmmac-Do-not-accept-invalid-MTU-values.patch
+	patches.suse/0008-net-stmmac-RX-buffer-size-must-be-16-byte-aligned.patch
 	patches.suse/net-sysctl-Fix-compiler-warning-when-only-cBPF-is-pr.patch
 	patches.suse/s390-qeth-handle-error-due-to-unsupported-transport-mode
 	patches.suse/s390-qeth-fix-promiscuous-mode-after-reset
