--- a/series.conf
+++ b/series.conf
@@ -53320,6 +53320,7 @@
 	patches.suse/0007-net-stmmac-Do-not-accept-invalid-MTU-values.patch
 	patches.suse/0008-net-stmmac-RX-buffer-size-must-be-16-byte-aligned.patch
 	patches.suse/0009-net-stmmac-16KB-buffer-must-be-16-byte-aligned.patch
+	patches.suse/0010-net-stmmac-Enable-16KB-buffer-size.patch
 	patches.suse/net-sysctl-Fix-compiler-warning-when-only-cBPF-is-pr.patch
 	patches.suse/s390-qeth-handle-error-due-to-unsupported-transport-mode
 	patches.suse/s390-qeth-fix-promiscuous-mode-after-reset
