Move the build fix for g2d driver into patches.suse
It's actaully no kABI fix but the pure build fix, hence it must be
out of patches.kabi

--- a/series.conf
+++ b/series.conf
@@ -57761,6 +57761,8 @@
 	# Intel IOMMU
 	patches.suse/iommu-vt-d-Correctly-calculate-agaw-in-domain_init.patch
 
+	patches.suse/Define-VFL_TYPE_VIDEO-for-g2d.patch
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
@@ -58118,7 +58120,6 @@
 	patches.kabi/bluetooth-l2cap-filter-ops-kABI-workaround.patch
 	patches.kabi/kABI-powerpc-avoid-including-pgtable.h-in-kup.h.patch
 	patches.kabi/kABI-powerpc-Add-back-__clear_user.patch
-	patches.kabi/kABI-fix-for-g2d.patch
 	patches.kabi/ipvlan_addr_lock_kabi.patch
 	patches.kabi/kABI-genirq-add-back-irq_create_mapping.patch
 	patches.kabi/b53_kabi.patch
