mm: hwpoison: disable memory error handling on 1GB hugepage (git fixes (mm/hwpoison)).

--- a/series.conf
+++ b/series.conf
@@ -29029,6 +29029,7 @@
 	patches.suse/0001-mm-memory_hotplug-optimize-probe-routine.patch
 	patches.suse/0001-mm-memory_hotplug-don-t-read-nid-from-struct-page-du.patch
 	patches.suse/0001-mm-memory_hotplug-optimize-memory-hotplug.patch
+	patches.suse/mm-hwpoison-disable-memory-error-handling-on-1GB-hugepage.patch
 	patches.suse/mm-huge_memory-c-reorder-operations-in-_split_huge_page_tail.patch
 	patches.suse/mm-free_pcppages_bulk-update-pcp-count-inside.patch
 	patches.suse/mm-free_pcppages_bulk-do-not-hold-lock-when-picking-pages-to-free.patch
