mm/rmap: map_pte() was not handling private ZONE_DEVICE page properly (git fixes (mm/hmm)).

--- a/series.conf
+++ b/series.conf
@@ -43517,6 +43517,7 @@
 	patches.suse/svcrdma-Reduce-max_send_sges.patch
 	patches.suse/nfsd-Fix-an-Oops-in-free_session.patch
 	patches.suse/lockd-fix-access-beyond-unterminated-strings-in-prin.patch
+	patches.suse/mm-rmap-map_pte-was-not-handling-private-ZONE_DEVICE-page-properly.patch
 	patches.suse/linux-bitmap.h-fix-type-of-nbits-in-bitmap_shift_rig.patch
 	patches.suse/hfsplus-prevent-btree-data-loss-on-root-split.patch
 	patches.suse/hfs-prevent-btree-data-loss-on-root-split.patch
