--- a/series.conf
+++ b/series.conf
@@ -54948,6 +54948,7 @@
 	patches.suse/nfp-abm-fix-a-memory-leak-bug.patch
 	patches.suse/net-stricter-validation-of-untrusted-gso-packets.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
+	patches.suse/mm-page_alloc-fix-watchdog-soft-lockups-during-set_zone_contiguous.patch
 	patches.suse/scripts-decodecode-fix-trapping-instruction-formatti.patch
 	patches.suse/mm-limit-boost_watermark-on-small-zones.patch
 	patches.suse/USB-uas-add-quirk-for-LaCie-2Big-Quadra.patch
