blacklist.conf: SLUB not enabled in kernel config

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1723,3 +1723,4 @@ d9a9280a0d0ae51dc1d4142138b99242b7ec8ac6 # breaks kABI, not worth the hassle
 aa8c7db494d0a83ecae583aa193f1134ef25d506 # breaks kABI
 5596fe34495cf0f645f417eb928ef224df3e3cb4 # UP not enabled in configs
 5812b32e01c6d86ba7a84110702b46d8a8531fe9 # Tables not used currently in-tree
+a68ee0573991e90af2f1785db309206408bad3e5 # SLUB not enabled in kernel config
