--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1724,3 +1724,4 @@ aa8c7db494d0a83ecae583aa193f1134ef25d506 # breaks kABI
 5596fe34495cf0f645f417eb928ef224df3e3cb4 # UP not enabled in configs
 5812b32e01c6d86ba7a84110702b46d8a8531fe9 # Tables not used currently in-tree
 a68ee0573991e90af2f1785db309206408bad3e5 # SLUB not enabled in kernel config
+dde3c6b72a16c2db826f54b2d49bdea26c3534a2 # SLUB not enabled in kernel config
