--- a/series.conf
+++ b/series.conf
@@ -55501,6 +55501,7 @@
 	patches.suse/0002-ocfs2-load-global_inode_alloc.patch
 	patches.suse/0003-ocfs2-fix-panic-on-nfs-server-over-ocfs2.patch
 	patches.suse/ocfs2-fix-value-of-OCFS2_INVALID_SLOT.patch
+	patches.suse/mm-slab-use-memzero_explicit-in-kzfree.patch
 	patches.suse/drm-tegra-hub-Do-not-enable-orphaned-window-group.patch
 	patches.suse/gpu-host1x-Detach-driver-on-unregister.patch
 	patches.suse/0001-drm-radeon-fix-fb_div-check-in-ni_init_smc_spll_tabl.patch
