mm, page_alloc: fix core hung in free_pcppages_bulk() (git fixes (mm/hotplug)).

--- a/series.conf
+++ b/series.conf
@@ -56149,6 +56149,7 @@
 	patches.suse/mm-vunmap-add-cond_resched-in-vunmap_pmd_range.patch
 	patches.suse/romfs-fix-uninitialized-memory-leak-in-romfs_dev_rea.patch
 	patches.suse/kernel-relay.c-fix-memleak-on-destroy-relay-channel.patch
+	patches.suse/mm-page_alloc-fix-core-hung-in-free_pcppages_bulk.patch
 	patches.suse/scsi-qla2xxx-Use-MBX_TOV_SECONDS-for-mailbox-command.patch
 	patches.suse/scsi-qla2xxx-Flush-all-sessions-on-zone-disable.patch
 	patches.suse/scsi-qla2xxx-Flush-I-O-on-zone-disable.patch
