page_frag: Recover from memory pressure (git fixes (mm/pgalloc)).

--- a/series.conf
+++ b/series.conf
@@ -56859,6 +56859,7 @@
 	patches.suse/can-m_can-m_can_stop-set-device-to-software-init-mod.patch
 	patches.suse/qed-fix-error-return-code-in-qed_iwarp_ll2_start.patch
 	patches.suse/inet_diag-Fix-error-path-to-cancel-the-meseage-in-in.patch
+	patches.suse/page_frag-Recover-from-memory-pressure.patch
 	patches.suse/net-mlx4_core-Fix-init_hca-fields-offset.patch
 	patches.suse/drm-sun4i-dw-hdmi-fix-error-return-code-in-sun8i_dw_.patch
 	patches.suse/drm-i915-gvt-Set-ENHANCED_FRAME_CAP-bit.patch
