blacklist.conf: Removal of HMM function breaks KABI

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1728,3 +1728,4 @@ dde3c6b72a16c2db826f54b2d49bdea26c3534a2 # SLUB not enabled in kernel config
 3a5139f1c5bb76d69756fb8f13fffa173e261153 # CMA not enabled in kernel config
 e08d3fdfe2dafa0331843f70ce1ff6c1c4900bf4 # CMA not enabled in kernel config
 8ff60eb052eeba95cfb3efe16b08c9199f8121cf # SLUB not enabled in kernel config
+58ef15b765af0d2cbe6799ec564f1dc485010ab8 # Breaks KABI
