--- a/series.conf
+++ b/series.conf
@@ -54785,6 +54785,7 @@
 	patches.suse/net-cxgb4-Check-the-return-from-t4_query_params-prop.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/xsk-Add-missing-check-on-user-supplied-headroom-size.patch
+	patches.suse/0001-net-stmmac-dwmac-sunxi-Provide-TX-and-RX-fifo-sizes.patch
 	patches.suse/0057-amd-xgbe-Use-__napi_schedule-in-BH-context.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-hda-realtek-Enable-the-headset-mic-on-Asus-FX50.patch
