NFSv4.2: condition READDIR's mask for security label based on LSM state (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57173,6 +57173,7 @@
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 	patches.suse/ceph-fix-race-in-concurrent-_ceph_remove_cap-invocations.patch
+	patches.suse/NFSv4.2-condition-READDIR-s-mask-for-security-label-.patch
 	patches.suse/powerpc-64-Set-up-a-kernel-stack-for-secondaries-bef.patch
 	patches.suse/Revert-powerpc-pseries-hotplug-cpu-Remove-double-fre.patch
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
