--- a/series.conf
+++ b/series.conf
@@ -57228,6 +57228,7 @@
 	patches.suse/usb-gadget-configfs-Preserve-function-ordering-after.patch
 	patches.suse/USB-serial-iuu_phoenix-fix-DMA-from-stack.patch
 	patches.suse/NFS4-Fix-use-after-free-in-trace_event_raw_event_nfs.patch
+	patches.suse/net-sunrpc-interpret-the-return-value-of-kstrtou32-c.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
