--- a/series.conf
+++ b/series.conf
@@ -57090,6 +57090,7 @@
 	patches.suse/cpufreq-scpi-Add-missing-MODULE_ALIAS.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/PCI-Fix-pci_slot_release-NULL-pointer-dereference.patch
+	patches.suse/nfsd-Fix-message-level-for-normal-termination.patch
 	patches.suse/0001-xen-xenbus-Allow-watches-discard-events-before-queue.patch
 	patches.suse/0002-xen-xenbus-Add-will_handle-callback-support-in-xenbu.patch
 	patches.suse/0003-xen-xenbus-xen_bus_type-Support-will_handle-watch-ca.patch
