NFS: nfs_igrab_and_active must first reference the superblock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57230,6 +57230,7 @@
 	patches.suse/NFS4-Fix-use-after-free-in-trace_event_raw_event_nfs.patch
 	patches.suse/net-sunrpc-interpret-the-return-value-of-kstrtou32-c.patch
 	patches.suse/pNFS-Mark-layout-for-return-if-return-on-close-was-n.patch
+	patches.suse/NFS-nfs_igrab_and_active-must-first-reference-the-su.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
