--- a/series.conf
+++ b/series.conf
@@ -57099,6 +57099,7 @@
 	patches.suse/0005-xenbus-xenbus_backend-Disallow-pending-watch-message.patch
 	patches.suse/xen-blkback-set-ring-xenblkd-to-NULL-after-kthread_s.patch
 	patches.suse/md-fix-a-warning-caused-by-a-race-between-concurrent.patch
+	patches.suse/md-raid10-initialize-r10_bio-read_slot-before-use.patch
 	patches.suse/0007-md-cluster-block-reshape-with-remote-resync-job.patch
 	patches.suse/0008-md-cluster-fix-deadlock-when-node-is-doing-resync-jo.patch
 	patches.suse/scsi-Remove-unneeded-break-statements.patch
