--- a/series.conf
+++ b/series.conf
@@ -55556,6 +55556,7 @@
 	patches.suse/tpm_tis-extra-chip-ops-check-on-error-path-in-tpm_ti.patch
 	patches.suse/tpm_tis-Remove-the-HID-IFX0102.patch
 	patches.suse/drm-msm-dpu-fix-error-return-code-in-dpu_encoder_ini.patch
+	patches.suse/0001-drm-sun4i-hdmi-Remove-extra-HPD-polling.patch
 	patches.suse/hwmon-max6697-Make-sure-the-OVERT-mask-is-set-correc.patch
 	patches.suse/hwmon-acpi_power_meter-Fix-potential-memory-leak-in-.patch
 	patches.suse/SMB3-Honor-seal-flag-for-multiuser-mounts.patch
