drm/amd/powerplay: fix a crash when overclocking Vega M (bsc#1113956)

--- a/series.conf
+++ b/series.conf
@@ -55661,6 +55661,7 @@
 	patches.suse/ASoC-rt5670-Correct-RT5670_LDO_SEL_MASK.patch
 	patches.suse/ALSA-hda-realtek-Fixed-ALC298-sound-bug-by-adding-qu.patch
 	patches.suse/s390-cpum_cf-perf-change-dflt_ccerror-counter-name
+	patches.suse/0003-drm-amd-powerplay-fix-a-crash-when-overclocking-Vega.patch
 	patches.suse/0002-drm-amdgpu-Fix-NULL-dereference-in-dpm-sysfs-handler.patch
 	patches.suse/Revert-i2c-cadence-Fix-the-hold-bit-setting.patch
 	patches.suse/0016-dm-integrity-fix-integrity-recalculation-that-is-imp.patch
