blacklist.conf: Append 'drm/i915: Move cec_notifier to intel_hdmi_connector_unregister, v2.'

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1729,3 +1729,4 @@ dde3c6b72a16c2db826f54b2d49bdea26c3534a2 # SLUB not enabled in kernel config
 e08d3fdfe2dafa0331843f70ce1ff6c1c4900bf4 # CMA not enabled in kernel config
 8ff60eb052eeba95cfb3efe16b08c9199f8121cf # SLUB not enabled in kernel config
 58ef15b765af0d2cbe6799ec564f1dc485010ab8 # Breaks KABI
+6647e6cdba753e71170be7da2acfead7154f56d8 # Not applicable: drm/i915: Move cec_notifier to intel_hdmi_connector_unregister, v2.
