--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1730,3 +1730,4 @@ e08d3fdfe2dafa0331843f70ce1ff6c1c4900bf4 # CMA not enabled in kernel config
 8ff60eb052eeba95cfb3efe16b08c9199f8121cf # SLUB not enabled in kernel config
 58ef15b765af0d2cbe6799ec564f1dc485010ab8 # Breaks KABI
 6647e6cdba753e71170be7da2acfead7154f56d8 # Not applicable: drm/i915: Move cec_notifier to intel_hdmi_connector_unregister, v2.
+0c56c862e712001e4d86bc4f43d74f2425c010c2 # Duplicate of 88bb16ad998a0395fe4b346b7d3f621aaa0a2324: drm/amd/powerplay: fix a crash when overclocking Vega M
