--- a/series.conf
+++ b/series.conf
@@ -56264,6 +56264,7 @@
 	patches.suse/net-smc-fix-sock-refcounting-in-case-of-termination
 	patches.suse/drm-amdgpu-Fix-bug-in-reporting-voltage-for-CIK.patch
 	patches.suse/drm-radeon-Prefer-lower-feedback-dividers.patch
+	patches.suse/0001-drm-i915-Fix-sha_text-population-code.patch
 	patches.suse/ALSA-firewire-tascam-exclude-Tascam-FE-8-from-detect.patch
 	patches.suse/ALSA-firewire-digi00x-exclude-Avid-Adrenaline-from-d.patch
 	patches.suse/ALSA-ca0106-fix-error-code-handling.patch
