--- a/series.conf
+++ b/series.conf
@@ -56582,6 +56582,7 @@
 	patches.suse/video-fbdev-sis-fix-null-ptr-dereference.patch
 	patches.suse/Fix-use-after-free-in-get_capset_info-callback.patch
 	patches.suse/0004-fbcon-Remove-the-superfluous-break.patch
+	patches.suse/0001-drm-msm-Avoid-div-by-zero-in-dpu_crtc_atomic_check.patch
 	patches.suse/drm-msm-Drop-debug-print-in-_dpu_crtc_setup_lm_bound.patch
 	patches.suse/drm-i915-Break-up-error-capture-compression-loops-wi.patch
 	patches.suse/drm-amd-display-HDMI-remote-sink-need-mode-validatio.patch
