--- a/series.conf
+++ b/series.conf
@@ -56981,6 +56981,7 @@
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/drm-gma500-fix-double-free-of-gma_connector.patch
 	patches.suse/drm-dp_aux_dev-check-aux_dev-before-use-in-drm_dp_au.patch
+	patches.suse/0002-drm-tve200-Fix-handling-of-platform_get_irq-error.patch
 	patches.suse/matroxfb-avoid-Warray-bounds-warning.patch
 	patches.suse/drm-amd-display-remove-useless-if-else.patch
 	patches.suse/drm-amdgpu-fix-build_coefficients-argument.patch
