drm/msm: Fix use-after-free in msm_gem with carveout (bsc#1129770)
Backporting changes:

	* context changes
	* removed reference to msm_gem_is_locked()

--- a/series.conf
+++ b/series.conf
@@ -56989,6 +56989,7 @@
 	patches.suse/drm-meson-dw-hdmi-Register-a-callback-to-disable-the.patch
 	patches.suse/drm-msm-dpu-Add-newline-to-printks.patch
 	patches.suse/drm-msm-dsi_phy_10nm-implement-PHY-disabling.patch
+	patches.suse/0003-drm-msm-Fix-use-after-free-in-msm_gem-with-carveout.patch
 	patches.suse/media-mtk-vcodec-add-missing-put_device-call-in-mtk_.patch
 	patches.suse/media-v4l2-async-Fix-trivial-documentation-typo.patch
 	patches.suse/media-platform-add-missing-put_device-call-in-mtk_jp.patch
