--- a/series.conf
+++ b/series.conf
@@ -56990,6 +56990,7 @@
 	patches.suse/drm-msm-dpu-Add-newline-to-printks.patch
 	patches.suse/drm-msm-dsi_phy_10nm-implement-PHY-disabling.patch
 	patches.suse/0003-drm-msm-Fix-use-after-free-in-msm_gem-with-carveout.patch
+	patches.suse/0004-drm-amdkfd-Put-ACPI-table-after-using-it.patch
 	patches.suse/media-mtk-vcodec-add-missing-put_device-call-in-mtk_.patch
 	patches.suse/media-v4l2-async-Fix-trivial-documentation-typo.patch
 	patches.suse/media-platform-add-missing-put_device-call-in-mtk_jp.patch
