arm64: pgtable: Ensure dirty bit is preserved across pte_wrprotect() (bsc#1180130).

--- a/series.conf
+++ b/series.conf
@@ -56896,6 +56896,7 @@
 	patches.suse/HID-hid-sensor-hub-Fix-issue-with-devices-with-no-re.patch
 	patches.suse/msft-hv-2172-video-hyperv_fb-Fix-the-cache-type-when-mapping-the-.patch
 	patches.suse/arm64-pgtable-Fix-pte_accessible.patch
+	patches.suse/arm64-pgtable-Ensure-dirty-bit-is-preserved-across-p.patch
 	patches.suse/platform-x86-acer-wmi-add-automatic-keyboard-backgro.patch
 	patches.suse/platform-x86-toshiba_acpi-Fix-the-wrong-variable-ass.patch
 	patches.suse/IB-mthca-fix-return-value-of-error-branch-in-mthca_i.patch
