floppy: reintroduce O_NDELAY fix (boo#1181018).

--- a/series.conf
+++ b/series.conf
@@ -57405,6 +57405,7 @@
 	patches.suse/0004-ocfs2-give-applications-more-IO-opportunities-during.patch
 	patches.suse/cifs-set_root_ses-ipc.patch
 	patches.suse/target-fix-XCOPY-NAA-identifier-lookup.patch
+	patches.suse/floppy-reintroduce-O_NDELAY-fix.patch
 
 	########################################################
 	# end of sorted patches
