--- a/series.conf
+++ b/series.conf
@@ -57220,6 +57220,7 @@
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 	patches.suse/wil6210-select-CONFIG_CRC32.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
+	patches.suse/0002-drm-msm-Fix-WARN_ON-splat-in-_free_object.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
 	patches.suse/docs-Fix-reST-markup-when-linking-to-sections.patch
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
