blacklist.conf: Add a couple of VFIO/PCI and SWIOTLB fixes

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1734,3 +1734,9 @@ e08d3fdfe2dafa0331843f70ce1ff6c1c4900bf4 # CMA not enabled in kernel config
 a581483b1e5466d28fc50ff623fba31cea2cccb6 # Duplicate of 6647e6cdba753e71170be7da2acfead7154f56d8: drm/i915: Move cec_notifier to intel_hdmi_connector_unregister, v2.
 1f0882214fd0037b74f245d9be75c31516fed040 # Duplicate of 9ab57658a608f879469ffa22b723c4539c05a58f: drm/i915: Fix sha_text population code
 2cc0c7b520bf8ea20ec42285d4e3d37b467eb7f9 # Duplicate of 57537b4e1d37002ed8cbd0a9be082104749e9d8f: drm/i915: Clear the repeater bit on HDCP disable
+bc93b9ae0151ae5ad5b8504cdc598428ea99570b # Breaks kABI
+12856e7acde4702b7c3238c15fcba86ff6aa507f # s390 PCI VFs not supported
+08b6e22b850c28b6032da1e4d767a33116e23dfb # s390 PCI VFs not supported
+515ecd5368f1510152fa4f9b9ce55b66ac56c334 # s390 PCI VFs not supported
+f51778db088b2407ec177f2f4da0f6290602aa3f # Compile fix only
+0107973a80adad5b73232d3fbcd26f710ab1f851 # breaks kABI, needed for SEV which is not supported in 15SP1
