--- a/series.conf
+++ b/series.conf
@@ -57180,6 +57180,7 @@
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.00.104-k.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
+	patches.suse/vfio-pci-use-io_remap_pfn_range-for-pci-io-memory
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
 	patches.suse/soc-mediatek-Check-if-power-domains-can-be-powered-o.patch
 	patches.suse/soc-qcom-smp2p-Safely-acquire-spinlock-without-IRQs.patch
