--- a/series.conf
+++ b/series.conf
@@ -56729,6 +56729,7 @@
 	patches.suse/clk-imx8mq-fix-usdhc-parents-order.patch
 	patches.suse/clk-bcm2835-add-missing-release-if-devm_clk_hw_regis.patch
 	patches.suse/Werror-return-type.patch
+	patches.suse/kvm-x86-mmu-commit-zap-of-remaining-invalid-pages-when-recovering-lpages
 	patches.suse/0001-KVM-SVM-Initialize-prev_ga_tag-before-use.patch
 	patches.suse/Convert-trailing-spaces-and-periods-in-path-components.patch
 	patches.suse/cifs-Return-the-error-from-crypt_message-when-enc-dec-key-not-found.patch
