--- a/series.conf
+++ b/series.conf
@@ -56842,6 +56842,7 @@
 	patches.suse/powercap-Restrict-energy-meter-to-root-access.patch
 	patches.suse/ACPI-GED-fix-Wformat.patch
 	patches.suse/bpf-Zero-fill-re-used-per-cpu-map-element.patch
+	patches.suse/net-af_iucv-fix-null-pointer-dereference-on-shutdown
 	patches.suse/igc-Fix-returning-wrong-statistics.patch
 	patches.suse/0003-drm-gma500-Fix-out-of-bounds-access-to-struct-drm_de.patch
 	patches.suse/mmc-sdhci-of-esdhc-Handle-pulse-width-detection-erra.patch
