net/af_iucv: always register net_device notifier (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49913,6 +49913,7 @@
 	patches.suse/net-udp_gso-Allow-TX-timestamp-with-UDP-GSO.patch
 	patches.suse/net-af_iucv-remove-gfp_dma-restriction-for-hipertransport
 	patches.suse/net-af_iucv-build-proper-skbs-for-hipertransport
+	patches.suse/net-af_iucv-always-register-net_device-notifier
 	patches.suse/net-hns3-Fix-inconsistent-indenting.patch
 	patches.suse/tcp-refine-memory-limit-test-in-tcp_fragment.patch
 	patches.suse/Bluetooth-Fix-regression-with-minimum-encryption-key.patch
