s390/smp: perform initial CPU reset also for SMT siblings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57014,6 +57014,7 @@
 	patches.suse/crypto-omap-aes-Fix-PM-disable-depth-imbalance-in-om.patch
 	patches.suse/edac-amd64-fix-pci-component-registration.patch
 	patches.suse/x86-mm-ident_map-check-for-errors-from-ident_pud_init.patch
+	patches.suse/s390-smp-perform-initial-cpu-reset-also-for-smt-siblings
 	patches.suse/mm-memory_failure-always-pin-the-page-in-madvise_inj.patch
 	patches.suse/mm-don-t-wake-kswapd-prematurely-when-watermark-boosting-is-disabled.patch
 	patches.suse/wimax-fix-duplicate-initializer-warning.patch
