s390/dasd: fix list corruption of lcu list (bsc#1181170 LTC#190915).

--- a/series.conf
+++ b/series.conf
@@ -57222,6 +57222,7 @@
 	patches.suse/s390-dasd-fix-hanging-device-offline-processing
 	patches.suse/s390-dasd-prevent-inconsistent-lcu-device-data
 	patches.suse/s390-dasd-fix-list-corruption-of-pavgroup-group-list
+	patches.suse/s390-dasd-fix-list-corruption-of-lcu-list
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 	patches.suse/ethernet-ucc_geth-fix-use-after-free-in-ucc_geth_rem.patch
 	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
