ACPI: scan: Make acpi_bus_get_device() clear return pointer on error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57262,6 +57262,7 @@
 	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
+	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
