ALSA: fireface: Fix integer overflow in transmit_midi_msg() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57257,6 +57257,7 @@
 	patches.suse/pNFS-Mark-layout-for-return-if-return-on-close-was-n.patch
 	patches.suse/NFS-nfs_igrab_and_active-must-first-reference-the-su.patch
 	patches.suse/ASoC-dapm-remove-widget-from-dirty-list-on-free.patch
+	patches.suse/ALSA-fireface-Fix-integer-overflow-in-transmit_midi_.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
