--- a/series.conf
+++ b/series.conf
@@ -57234,6 +57234,7 @@
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/net-vlan-avoid-leaks-on-register_vlan_dev-failures.patch
 	patches.suse/0002-drm-msm-Fix-WARN_ON-splat-in-_free_object.patch
+	patches.suse/ACPI-scan-add-stub-acpi_create_platform_device-for-C.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
 	patches.suse/docs-Fix-reST-markup-when-linking-to-sections.patch
 	patches.suse/dmaengine-xilinx_dma-check-dma_async_device_register.patch
