misdn: dsp: select CONFIG_BITREVERSE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57230,6 +57230,7 @@
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
 	patches.suse/wil6210-select-CONFIG_CRC32.patch
+	patches.suse/misdn-dsp-select-CONFIG_BITREVERSE.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/net-vlan-avoid-leaks-on-register_vlan_dev-failures.patch
 	patches.suse/0002-drm-msm-Fix-WARN_ON-splat-in-_free_object.patch
