--- a/series.conf
+++ b/series.conf
@@ -57265,6 +57265,7 @@
 	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
 	patches.suse/drm-atomic-put-state-on-error-path.patch
 	patches.suse/mmc-sdhci-xenon-fix-1.8v-regulator-stabilization.patch
+	patches.suse/i2c-octeon-check-correct-size-of-maximum-RECV_LEN-pa.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
