ALSA: firewire-tascam: Fix integer overflow in midi_port_work() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57258,6 +57258,7 @@
 	patches.suse/NFS-nfs_igrab_and_active-must-first-reference-the-su.patch
 	patches.suse/ASoC-dapm-remove-widget-from-dirty-list-on-free.patch
 	patches.suse/ALSA-fireface-Fix-integer-overflow-in-transmit_midi_.patch
+	patches.suse/ALSA-firewire-tascam-Fix-integer-overflow-in-midi_po.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
