--- a/series.conf
+++ b/series.conf
@@ -57266,6 +57266,7 @@
 	patches.suse/drm-atomic-put-state-on-error-path.patch
 	patches.suse/mmc-sdhci-xenon-fix-1.8v-regulator-stabilization.patch
 	patches.suse/i2c-octeon-check-correct-size-of-maximum-RECV_LEN-pa.patch
+	patches.suse/usb-udc-core-Use-lock-when-write-to-soft_connect.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
