--- a/series.conf
+++ b/series.conf
@@ -57268,6 +57268,7 @@
 	patches.suse/i2c-octeon-check-correct-size-of-maximum-RECV_LEN-pa.patch
 	patches.suse/usb-udc-core-Use-lock-when-write-to-soft_connect.patch
 	patches.suse/serial-mvebu-uart-fix-tx-lost-characters-at-power-of.patch
+	patches.suse/iio-ad5504-Fix-setting-power-down-state.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
