--- a/series.conf
+++ b/series.conf
@@ -57256,6 +57256,7 @@
 	patches.suse/net-sunrpc-interpret-the-return-value-of-kstrtou32-c.patch
 	patches.suse/pNFS-Mark-layout-for-return-if-return-on-close-was-n.patch
 	patches.suse/NFS-nfs_igrab_and_active-must-first-reference-the-su.patch
+	patches.suse/ASoC-dapm-remove-widget-from-dirty-list-on-free.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
