--- a/series.conf
+++ b/series.conf
@@ -57259,6 +57259,7 @@
 	patches.suse/ASoC-dapm-remove-widget-from-dirty-list-on-free.patch
 	patches.suse/ALSA-fireface-Fix-integer-overflow-in-transmit_midi_.patch
 	patches.suse/ALSA-firewire-tascam-Fix-integer-overflow-in-midi_po.patch
+	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
