serial: mvebu-uart: fix tx lost characters at power off (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57267,6 +57267,7 @@
 	patches.suse/mmc-sdhci-xenon-fix-1.8v-regulator-stabilization.patch
 	patches.suse/i2c-octeon-check-correct-size-of-maximum-RECV_LEN-pa.patch
 	patches.suse/usb-udc-core-Use-lock-when-write-to-soft_connect.patch
+	patches.suse/serial-mvebu-uart-fix-tx-lost-characters-at-power-of.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
