--- a/series.conf
+++ b/series.conf
@@ -57261,6 +57261,7 @@
 	patches.suse/ALSA-firewire-tascam-Fix-integer-overflow-in-midi_po.patch
 	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
+	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
