--- a/series.conf
+++ b/series.conf
@@ -57263,6 +57263,7 @@
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
 	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
+	patches.suse/drm-atomic-put-state-on-error-path.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
