mmc: sdhci-xenon: fix 1.8v regulator stabilization (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57264,6 +57264,7 @@
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
 	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
 	patches.suse/drm-atomic-put-state-on-error-path.patch
+	patches.suse/mmc-sdhci-xenon-fix-1.8v-regulator-stabilization.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
