--- a/series.conf
+++ b/series.conf
@@ -57283,6 +57283,7 @@
 	patches.suse/scsi-lpfc-Fix-target-reset-failing.patch
 	patches.suse/scsi-lpfc-Fix-NVMe-recovery-after-mailbox-timeout.patch
 	patches.suse/scsi-lpfc-Fix-vport-create-logging.patch
+	patches.suse/scsi-lpfc-Implement-health-checking-when-aborting-I-.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
