scsi: lpfc: Fix PLOGI S_ID of 0 on pt2pt config (bsc#1180891).

--- a/series.conf
+++ b/series.conf
@@ -57271,6 +57271,9 @@
 	patches.suse/serial-mvebu-uart-fix-tx-lost-characters-at-power-of.patch
 	patches.suse/iio-ad5504-Fix-setting-power-down-state.patch
 
+	# jejb/scsi for-next
+	patches.suse/scsi-lpfc-Fix-PLOGI-S_ID-of-0-on-pt2pt-config.patch
+
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
 	patches.suse/0003-efi-Add-an-EFI-signature-blob-parser.patch
