scsi: lpfc: Simplify bool comparison (bsc#1180891).

--- a/series.conf
+++ b/series.conf
@@ -57286,6 +57286,7 @@
 	patches.suse/scsi-lpfc-Implement-health-checking-when-aborting-I-.patch
 	patches.suse/scsi-lpfc-Enhancements-to-LOG_TRACE_EVENT-for-better.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.7.patch
+	patches.suse/scsi-lpfc-Simplify-bool-comparison.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
