--- a/series.conf
+++ b/series.conf
@@ -57277,6 +57277,7 @@
 	patches.suse/scsi-lpfc-Refresh-ndlp-when-a-new-PRLI-is-received-i.patch
 	patches.suse/scsi-lpfc-Fix-crash-when-a-fabric-node-is-released-p.patch
 	patches.suse/scsi-lpfc-Use-the-nvme-fc-transport-supplied-timeout.patch
+	patches.suse/scsi-lpfc-Fix-FW-reset-action-if-I-Os-are-outstandin.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
