--- a/series.conf
+++ b/series.conf
@@ -57274,6 +57274,7 @@
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-PLOGI-S_ID-of-0-on-pt2pt-config.patch
 	patches.suse/scsi-lpfc-Fix-auto-sli_mode-and-its-effect-on-CONFIG.patch
+	patches.suse/scsi-lpfc-Refresh-ndlp-when-a-new-PRLI-is-received-i.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
