scsi: lpfc: Fix vport create logging (bsc#1180891).

--- a/series.conf
+++ b/series.conf
@@ -57282,6 +57282,7 @@
 	patches.suse/scsi-lpfc-Fix-error-log-messages-being-logged-follow.patch
 	patches.suse/scsi-lpfc-Fix-target-reset-failing.patch
 	patches.suse/scsi-lpfc-Fix-NVMe-recovery-after-mailbox-timeout.patch
+	patches.suse/scsi-lpfc-Fix-vport-create-logging.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
