--- a/series.conf
+++ b/series.conf
@@ -57280,6 +57280,7 @@
 	patches.suse/scsi-lpfc-Fix-FW-reset-action-if-I-Os-are-outstandin.patch
 	patches.suse/scsi-lpfc-Prevent-duplicate-requests-to-unregister-w.patch
 	patches.suse/scsi-lpfc-Fix-error-log-messages-being-logged-follow.patch
+	patches.suse/scsi-lpfc-Fix-target-reset-failing.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
