cxgb4: fix adapter crash due to wrong MC size (bsc#1073513).

--- a/series.conf
+++ b/series.conf
@@ -54879,6 +54879,7 @@
 	patches.suse/net-dsa-b53-Fix-ARL-register-definitions.patch
 	patches.suse/net-dsa-b53-Rework-ARL-bin-logic.patch
 	patches.suse/mlxsw-Fix-some-IS_ERR-vs-NULL-bugs.patch
+	patches.suse/cxgb4-fix-adapter-crash-due-to-wrong-MC-size.patch
 	patches.suse/net-x25-Fix-x25_neigh-refcnt-leak-when-receiving-fra.patch
 	patches.suse/net-bcmgenet-correct-per-TX-RX-ring-statistics.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
