--- a/series.conf
+++ b/series.conf
@@ -56215,6 +56215,7 @@
 	patches.suse/ALSA-usb-audio-ignore-broken-processing-extension-un.patch
 	patches.suse/ASoC-intel-Fix-memleak-in-sst_media_open.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Samsung-Galaxy-Book-I.patch
+	patches.suse/RDMA-bnxt_re-Do-not-add-user-qps-to-flushlist.patch
 	patches.suse/ext4-fix-potential-negative-array-index-in-do_split.patch
 	patches.suse/jbd2-add-the-missing-unlock_buffer-in-the-error-path.patch
 	patches.suse/ext4-handle-error-of-ext4_setup_system_zone-on-remou.patch
