--- a/series.conf
+++ b/series.conf
@@ -55335,6 +55335,7 @@
 	patches.suse/RDMA-uverbs-Make-the-event_queue-fds-return-POLLERR-.patch
 	patches.suse/RDMA-mlx5-Verify-that-QP-is-created-with-RQ-or-SQ.patch
 	patches.suse/RDMA-hns-Fix-cmdq-parameter-of-querying-pf-timer-res.patch
+	patches.suse/RDMA-mlx5-Add-init2init-as-a-modify-command.patch
 	patches.suse/RDMA-efa-Fix-setting-of-wrong-bit-in-get-set_feature.patch
 	patches.suse/IB-cma-Fix-ports-memory-leak-in-cma_configfs.patch
 	patches.suse/scsi-qla2xxx-Split-qla2x00_configure_local_loop.patch
