cxgb4/cxgb4vf: fix flow control display for auto negotiation (bsc#1046540 FATE#322930 bsc#1046542 FATE#322928).

--- a/series.conf
+++ b/series.conf
@@ -53367,6 +53367,7 @@
 	patches.suse/net-mlxfw-Fix-out-of-memory-error-in-mfa2-flash-burn.patch
 	patches.suse/dpaa_eth-fix-DMA-mapping-leak.patch
 	patches.suse/net-stmmac-dwmac-meson8b-Fix-the-RGMII-TX-delay-on-M.patch
+	patches.suse/cxgb4-cxgb4vf-fix-flow-control-display-for-auto-nego.patch
 	patches.suse/ptp-fix-the-race-between-the-release-of-ptp_clock-an.patch
 	patches.suse/pstore-ram-Write-new-dumps-to-start-of-recycled-zone.patch
 	patches.suse/0001-drm-sun4i-hdmi-Remove-duplicate-cleanup-calls.patch
