net/mlx5e: TX, Fix consumer index of error cqe dump (bsc#1103990 FATE#326006).

--- a/series.conf
+++ b/series.conf
@@ -52305,6 +52305,7 @@
 	patches.suse/SUNRPC-The-RDMA-back-channel-mustn-t-disappear-while.patch
 	patches.suse/NFSv4-Don-t-allow-a-cached-open-with-a-revoked-deleg.patch
 	patches.suse/NFS-Fix-an-RCU-lock-leak-in-nfs4_refresh_delegation_.patch
+	patches.suse/net-mlx5e-TX-Fix-consumer-index-of-error-cqe-dump.patch
 	patches.suse/net-mlx5-prevent-memory-leak-in-mlx5_fpga_conn_creat.patch
 	patches.suse/r8152-add-device-id-for-Lenovo-ThinkPad-USB-C-Dock-G.patch
 	patches.suse/net-openvswitch-free-vport-unless-register_netdevice.patch
