--- a/series.conf
+++ b/series.conf
@@ -56312,6 +56312,7 @@
 	patches.suse/batman-adv-bla-use-netif_rx_ni-when-not-in-interrupt.patch
 	patches.suse/gtp-add-GTPA_LINK-info-to-msg-sent-to-userspace.patch
 	patches.suse/ibmvnic-fix-NULL-tx_pools-and-rx_tools-issue-at-do_r.patch
+	patches.suse/bnxt_en-Don-t-query-FW-when-netif_running-is-false.patch
 	patches.suse/bnxt_en-Check-for-zero-dir-entries-in-NVRAM.patch
 	patches.suse/net-disable-netpoll-on-fresh-napis.patch
 	patches.suse/bnxt-don-t-enable-NAPI-until-rings-are-ready.patch
