net: cbs: Fix software cbs to consider packet sending time (bsc#1109837).

--- a/series.conf
+++ b/series.conf
@@ -54330,6 +54330,7 @@
 	patches.suse/bnxt_en-Return-error-if-bnxt_alloc_ctx_mem-fails.patch
 	patches.suse/bnxt_en-Reset-rings-if-ring-reservation-fails-during.patch
 	patches.suse/net-dsa-Fix-duplicate-frames-flooded-by-learning.patch
+	patches.suse/net-cbs-Fix-software-cbs-to-consider-packet-sending-.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/RDMA-mlx5-Fix-access-to-wrong-pointer-while-performi.patch
 	patches.suse/0001-ceph-check-pool_flag_full-nearfull-in-addition-to-osdmap_full-nearfull.patch
